<resources>
    <string name="app_name">Eaterly</string>
    <string name="underline_location"><u>Tempatnya ga bener? Ubah</u></string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="password">Password</string>
    <string name="email">Email</string>
    <string name="login">Login</string>
    <string name="register">Register</string>
    <string name="username">Username</string>
    <string name="no_acc">Don\'t have an account yet?</string>
    <string name="yes_acc">Already have an account?</string>
    <string name="sign_up">Sign up here!</string>
    <string name="log_in">Login here!</string>
    <string name="account">Account</string>
    <string name="other_info">Other Info</string>
    <string name="orders">Orders</string>
    <string name="orders_desc">See ongoing &amp; history</string>
    <string name="acc_settings">Account Settings</string>
    <string name="history">History</string>
    <string name="ongoing">Ongoing</string>
    <string name="edit_profile">Edit Profile</string>
    <string name="save">Save</string>
    <string name="profile_picture">Profile Picture</string>
    <string name="profile_picture_desc">Use a cool photo for everyone to see!</string>
    <string name="edit_prof_pic">Change photo</string>
    <string name="phone_number">Phone Number</string>
    <string name="map_description">This is a map</string>
    <string name="expand_map">Expand map</string>
    <string name="collapse_map">Collapse map</string>
    <string name="submit">Submit</string>

    <string-array name="account_settings">
        <item>Orders</item>
        <item>Promotions</item>
        <item>Payment Methods</item>
        <item>Help &amp; My Reports</item>
        <item>Language</item>
        <item>Invite Friends</item>
        <item>Manage Account</item>
    </string-array>

    <string-array name="acc_settings_desc">
        <item>Check history &amp; active orders</item>
        <item> </item>
        <item> </item>
        <item> </item>
        <item> </item>
        <item> </item>
        <item> </item>
    </string-array>

    <string-array name="acc_img_settings">
        <item>@drawable/history</item>
        <item>@drawable/promo</item>
        <item>@drawable/payment</item>
        <item>@drawable/help</item>
        <item>@drawable/language</item>
        <item>@drawable/invite_friends</item>
        <item>@drawable/manage_acc</item>
    </string-array>

    <string-array name="other_settings">
        <item>Terms &amp; Conditions</item>
        <item>Rate Us</item>
    </string-array>

    <string-array name="oth_img_settings">
        <item>@drawable/tnc</item>
        <item>@drawable/rate</item>
    </string-array>

    <string-array name="oth_settings_desc">
        <item> </item>
        <item> </item>
    </string-array>

    <string-array name="mng_acc_settings">
        <item>Log Out</item>
        <item>Delete Account</item>
    </string-array>

    <string-array name="mng_acc_img">
        <item>@drawable/logout_icon</item>
        <item>@drawable/trash_can</item>
    </string-array>

    <string-array name="mng_acc_desc">
        <item> </item>
        <item> </item>
    </string-array>
</resources>