<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="20dp"
    tools:context=".SignInActivity">

    <ImageView
        android:layout_width="match_parent"
        android:layout_height="200dp"
        android:padding="20dp"
        android:src="@drawable/cutlery" />

    <EditText
        android:id="@+id/edt_username"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:inputType="textPersonName"
        android:hint="@string/username"
        android:textColor="@color/black_trs"
        android:backgroundTint="@color/green"/>

    <EditText
        android:id="@+id/edt_email"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:inputType="textEmailAddress"
        android:hint="@string/email"
        android:textColor="@color/black_trs"
        android:backgroundTint="@color/green"/>

    <EditText
        android:id="@+id/edt_pass"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:inputType="textPassword"
        android:hint="@string/password"
        android:textColor="@color/black_trs"
        android:backgroundTint="@color/green"/>


    <CheckBox
        android:id="@+id/checkBoxSeller"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="Register as Seller"
        android:layout_marginBottom="10dp"
        android:textSize="18dp"
        android:textColor="@color/black_trs"
        android:buttonTint="@color/green"/>

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/btnRegister"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="20dp"
        android:background="@drawable/rec50"
        android:padding="20dp"
        android:text="@string/register"
        android:textColor="@color/white"/>

    <LinearLayout
        android:id="@+id/ll_tvs"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:orientation="horizontal"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btn_login">

        <TextView
            android:id="@+id/tv_yes_acc"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/yes_acc"
            android:textColor="@color/black" />

        <TextView
            android:id="@+id/tv_log_in"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="2dp"
            android:text="@string/log_in"
            android:textColor="@color/dark_green"
            android:textStyle="bold" />
    </LinearLayout>

</LinearLayout>