<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".pages.EditProfileActivity">

    <LinearLayout
        android:id="@+id/ll_top_bar"
        style="@style/TopBar"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <ImageButton
            android:id="@+id/btn_back"
            style="@style/BackButton"
            android:src="@drawable/ic_arrow_left" />

        <TextView
            style="@style/SettingTitle"
            android:layout_weight="1"
            android:text="@string/edit_profile" />

        <androidx.appcompat.widget.AppCompatButton
            style="@style/NavButton.RoundedButton"
            android:text="@string/save" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:padding="10dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/ll_top_bar">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:orientation="vertical"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/ll_top_bar">

                <TextView
                    android:layout_marginTop="0dp"
                    style="@style/InfoTextView.ProfileFieldTitle"
                    android:text="@string/profile_picture" />

                <ImageButton
                    android:id="@+id/img_pp"
                    android:layout_width="100dp"
                    android:layout_height="100dp"
                    android:background="@color/transparent" />

                <TextView
                    style="@style/InfoTextView.NormalText"
                    android:text="@string/edit_prof_pic" />

            </LinearLayout>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginStart="10dp"
                android:text="@string/profile_picture_desc" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal">
            <TextView
                style="@style/InfoTextView.ProfileFieldTitle"
                android:text="@string/username"/>
            <TextView
                style="@style/InfoTextView.ProfileFieldTitle.Required"/>
        </LinearLayout>

        <EditText
            android:id="@+id/edt_username"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            style="@style/ProfileField"/>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal">
            <TextView
                style="@style/InfoTextView.ProfileFieldTitle"
                android:text="@string/email"/>
            <TextView
                style="@style/InfoTextView.ProfileFieldTitle.Required"/>
        </LinearLayout>

        <EditText
            android:id="@+id/edt_email"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            style="@style/ProfileField"/>

    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>